--- a/modules/network/aws_vpc/0.1/facets.yaml
+++ b/modules/network/aws_vpc/0.1/facets.yaml
@@ -15,7 +15,7 @@ spec:
     choose_vpc_type:
       title: Choose VPC Type
       description: Choose the type of vpc to create
-      type: string
+      type: radio
       enum: [{label: Create New VPC, value: create_new_vpc}, {label: Use Existing
             VPC, value: use_existing_vpc}]
       default: create_new_vpc
