--- a/modules/network/gcp_vpc/0.1/facets.yaml
+++ b/modules/network/gcp_vpc/0.1/facets.yaml
@@ -16,7 +16,7 @@ spec:
     choose_vpc_type:
       title: Choose VPC Type
       description: Choose the type of VPC
-      type: string
+      type: radio
       x-ui-immutable: true
       x-ui-overrides-only: true
       enum: [{label: Create New VPC, value: create_new_vpc}, {label: Use Existing
