--- a/modules/kafka/external/0.1/facets.yaml
+++ b/modules/kafka/external/0.1/facets.yaml
@@ -15,14 +15,14 @@ spec:
       type: string
       title: Endpoint
       description: This is the Kafka Endpoint that is used to connect kafka instances
-      pattern: '^((([a-zA-Z0-9]([a-zA-Z0-9-]*[a-zA-Z0-9])?\.)+[a-zA-Z]{2,}|localhost|(\d{1,3}\.){3}\d{1,3})):(6553[0-5]|655[0-2]\d|65[0-4]\d{2}|6[0-4]\d{3}|[1-5]\d{4}|\d{1,4})$'
+      pattern: '^((([a-zA-Z0-9]([a-zA-Z0-9\\-]*[a-zA-Z0-9])?\\.)\\+[a-zA-Z]{2,}|localhost|(\\d{1,3}\\.)\\{3\\}\\d{1,3})):(6553[0-5]|655[0-2]\\d|65[0-4]\\d{2}|6[0-4]\\d{3}|[1-5]\\d{4}|\\d{1,4})$'
       x-ui-placeholder: "Enter the Kafka endpoint in the format host:port"
       x-ui-error-message: "Value must be in the format host:port, where host is a valid domain name or IP address, and port is a number between 1 and 65535."
     username:
       type: string
       title: Username
       description: This is the Kafka username that is used to connect kafka instances
-      pattern: '^[a-zA-Z0-9_-]+$'
+      pattern: '^[a-zA-Z0-9_\\-]+$'
       x-ui-placeholder: "Enter the Kafka username"
       x-ui-error-message: "Username can only contain alphanumeric characters, underscores, or hyphens."
     password:
@@ -33,7 +33,7 @@ spec:
       type: string
       title: Connection String
       description: This is the Kafka connections string with protocol that is used to connect kafka instances
-      pattern: "^kafka:\\/\\/[a-zA-Z0-9._%+-]+:[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+(:[0-9]{1,5})(,[a-zA-Z0-9.-]+(:[0-9]{1,5}))*$"
+      pattern: "^kafka:\\/\\/[a-zA-Z0-9\\._%-]+:[a-zA-Z0-9\\._%-]+@[a-zA-Z0-9\\.\\-]+(:[0-9]{1,5})(,[a-zA-Z0-9\\.\\-]+(:[0-9]{1,5}))*$"
   required: ["connection_string", "endpoint"]
 sample:
   $schema: "https://facets-cloud.github.io/facets-schemas/schemas/kafka/kafka.schema.json"
@@ -43,8 +43,7 @@ sample:
   disabled: true
   metadata: {}
   spec:
-    username: ""
-    password: ""
-    endpoint: ""
-    connection_string: ""
-
+    username: "kafka-user"
+    password: "kafka-password"
+    endpoint: "localhost:9092"
+    connection_string: "kafka://user:pass@localhost:9092"
