--- a/modules/kafka/k8s/0.2/facets.yaml
+++ b/modules/kafka/k8s/0.2/facets.yaml
@@ -19,6 +19,7 @@ spec:
       type: string
       title: Kafka Version
       description: Version of kafka e.g. 3.2.3
+      x-ui-typeable: true
       enum:
         - "1.1.1"
         - "2.8.0"
