--- a/modules/mysql/k8s/0.1/facets.yaml
+++ b/modules/mysql/k8s/0.1/facets.yaml
@@ -15,6 +15,7 @@ spec:
       type: string
       title: MySQL Version
       description: Version of MySQL
+      x-ui-typeable: true
       enum:
         - "5.7.43"
         - "8.0.34"
