--- a/modules/postgres/k8s/0.1/facets.yaml
+++ b/modules/postgres/k8s/0.1/facets.yaml
@@ -25,6 +25,7 @@ spec:
       description: Specifies the Postgres version to use.
       minLength: 1
       x-ui-placeholder: "e.g., '13.3.0' or '15.3.0'"
+      x-ui-typeable: true
       enum:
       - "9.6.9"
       - "10.9.0"
