--- a/modules/postgres/rds/0.1/facets.yaml
+++ b/modules/postgres/rds/0.1/facets.yaml
@@ -14,6 +14,7 @@ spec:
       description: Specifies the Postgres version to use.
       minLength: 1
       x-ui-placeholder: "Ex. 14"
+      x-ui-typeable: true
       enum:
       - "16"
       - "15"
