--- a/modules/mysql/aurora/0.2/facets.yaml
+++ b/modules/mysql/aurora/0.2/facets.yaml
@@ -14,6 +14,7 @@ spec:
       description: Version of MySQL
       minLength: 1
       x-ui-placeholder: "Ex. 8.0"
+      x-ui-typeable: true
     size:
       type: object
       title: Size
