--- a/modules/mysql/rds/0.1/facets.yaml
+++ b/modules/mysql/rds/0.1/facets.yaml
@@ -14,6 +14,7 @@ spec:
       description: Version of MySQL
       minLength: 1
       x-ui-placeholder: "Ex. 8.0"
+      x-ui-typeable: true
       enum:
         - "8.0"
         - "5.7"
