--- a/modules/redis/azure_cache/0.1/facets.yaml
+++ b/modules/redis/azure_cache/0.1/facets.yaml
@@ -20,6 +20,7 @@ spec:
       type: string
       title: Redis Version
       description: Specifies the Redis version to use.
+      x-ui-typeable: true
       enum:
         - '4.0'
         - '6.0'
