--- a/modules/redis/memorystore/0.2/facets.yaml
+++ b/modules/redis/memorystore/0.2/facets.yaml
@@ -20,6 +20,7 @@ spec:
       type: string
       title: Redis Version
       description: Specifies the Redis version to use.
+      x-ui-typeable: true
       enum:
         - '3.2'
         - '4.0'
