--- a/modules/redis/k8s/0.1/facets.yaml
+++ b/modules/redis/k8s/0.1/facets.yaml
@@ -32,6 +32,7 @@ spec:
       type: string
       title: Redis Version
       description: Specifies the Redis version to use.
+      x-ui-typeable: true
       enum:
         - "3.2.9-r3"
         - "4.0.14"
