--- a/modules/mysql/k8s/0.2/facets.yaml
+++ b/modules/mysql/k8s/0.2/facets.yaml
@@ -24,6 +24,7 @@ spec:
       type: string
       title: MySQL Version
       description: Version of MySQL
+      x-ui-typeable: true
       enum:
         - "8.0.34"
         - "8.0.4"
