--- a/modules/rabbitmq/k8s/0.1/facets.yaml
+++ b/modules/rabbitmq/k8s/0.1/facets.yaml
@@ -25,6 +25,7 @@ spec:
       title: RabbitMQ Version
       description: Version of RabbitMQ
       minLength: 1
+      x-ui-typeable: true
       enum:
         - "3.10.7"
         - "3.10.19"
