--- a/modules/mysql/k8s/0.2/facets.yaml
+++ b/modules/mysql/k8s/0.2/facets.yaml
@@ -1,123 +1,205 @@
-intent: cassandra
+intent: mysql
 flavor: k8s
 version: "0.1"
-description: Adds cassandra - k8s flavor
+description: Adds MYSQL module of flavor kubernetes
 clouds:
   - aws
-  - gcp
   - azure
+  - gcp
   - kubernetes
 metadata:
-  title: Metadata of Cassandra
+  title: Metadata of Mysql
   type: object
   properties:
     namespace:
       type: string
       title: Namespace
-      description: Namespace in which Cassandra should be deployed
+      description: Namespace in which Mysql should be deployed
       default: default
 spec:
-  title: K8s Cassandra
+  title: K8s
   type: object
   properties:
-    cassandra_version:
+    mysql_version:
       type: string
-      title: Cassandra Version
-      description: Version of Cassandra DB
-      minLength: 1
+      title: MySQL Version
+      description: Version of MySQL
       enum:
-        - "5.0.2"
-        - "4.1.7"
-        - "4.0.15"
+        - "5.7.43"
+        - "8.0.34"
+        - "8.0.4"
+      x-ui-placeholder: "Ex. 8.0"
     size:
       type: object
       title: Size
-      description: Datastore Sizing
+      description: Writer and Reader Datastore Sizing
       properties:
-        cpu:
-          type: string
-          title: CPU
-          description: Number of CPU cores required
-          minLength: 1
-          pattern: "^[0-9]+[m]?$"
-          x-ui-compare:
-            field: spec.size.cpu_limit
-            comparator: "<="
-            x-ui-error-message: "CPU cannot be more than CPU limit"
-          x-ui-placeholder: "Enter CPU cores"
-          x-ui-error-message: "Value doesn't match '^[0-9]+[m]?$' pattern"
-        memory:
-          type: string
-          title: Memory
-          description: Amount of required memory
-          minLength: 1
-          pattern: "^[0-9]+(\\.[0-9]+)?[EiKMGTP]i?$"
-          x-ui-compare:
-            field: spec.size.memory_limit
-            comparator: "<="
-            x-ui-error-message: "Memory cannot be more than memory limit"
-          x-ui-placeholder: "Enter memory (Ex. 2Gi)"
-          x-ui-error-message: "Value doesn't match '^[0-9]+(\\.[0-9]+)?[EiKMGTP]i?' pattern"
-        cpu_limit:
-          type: string
-          title: CPU Limit
-          description: CPU limit for the instance
-          minLength: 1
-          pattern: "^[0-9]+[m]?$"
-          x-ui-compare:
-            field: spec.size.cpu
-            comparator: ">="
-            x-ui-error-message: "CPU limit cannot be less than CPU"
-          x-ui-placeholder: "Enter CPU limit"
-          x-ui-error-message: "Value doesn't match '^[0-9]+[m]?$' pattern"
-        memory_limit:
-          type: string
-          title: Memory Limit
-          description: Memory limit for the instance
-          minLength: 1
-          pattern: "^[0-9]+(\\.[0-9]+)?[EiKMGTP]i?$"
-          x-ui-compare:
-            field: spec.size.memory
-            comparator: ">="
-            x-ui-error-message: "Memory limit cannot be less than memory"
-          x-ui-placeholder: "Enter memory limit"
-          x-ui-error-message: "Value doesn't match '^[0-9]+(\\.[0-9]+)?[EiKMGTP]i?' pattern"
-        volume:
-          type: string
-          title: Volume
-          description: Size of the volume
-          pattern: "^[0-9]+[G]i?$"
-          x-ui-placeholder: "Enter volume size"
-          x-ui-error-message: "Value doesn't match '^[0-9]+[G]i?$' pattern"
-        instance_count:
-          type: integer
-          title: Instance Count
-          description: Number of instances to create
-          minimum: 1
-          maximum: 100
-          x-ui-placeholder: "Enter instance count"
+        reader:
+          type: object
+          title: Reader
+          description: Reader Node Configuration
+          properties:
+            cpu:
+              type: string
+              title: CPU
+              description: Number of CPU cores
+              minLength: 1
+              pattern: "^([1-9]|[12][0-9]|3[0-2])$|^(3[0-1][0-9]{3}|[1-2][0-9]{4}|[1-9][0-9]{0,3}|32000)m$"
+              x-ui-compare:
+                field: spec.size.reader.cpu_limit
+                comparator: "<="
+                x-ui-error-message: "CPU cannot be more than cpu limit"
+              x-ui-placeholder: "e.g., '500m' or '1'"
+              x-ui-error-message: "Value doesn't match pattern, it should be number ranging from 1 to 32 or 1m to 32000m"
+            memory:
+              type: string
+              title: Memory
+              description: Amount of memory
+              minLength: 1
+              pattern: "^(0\\.[1-9]|[1-9](\\.[0-9]+)?|[1-5][0-9](\\.[0-9]+)?|6[0-4])Gi$|^([1-9](\\.[0-9]+)?|[1-9][0-9]{1,3}(\\.[0-9]+)?|[1-5][0-9]{4}(\\.[0-9]+)?|6[0-3][0-9]{3}(\\.[0-9]+)?|64000)Mi$"
+              x-ui-compare:
+                field: spec.size.reader.memory_limit
+                comparator: "<="
+                x-ui-error-message: "Memory cannot be more than memory limit"
+              x-ui-placeholder: "e.g., '800Mi' or '1.5Gi'"
+              x-ui-error-message: "Value doesn't match pattern, it should be number ranging from 1Gi to 64Gi or 1Mi to 64000Mi"
+            cpu_limit:
+              type: string
+              title: CPU Limit
+              description: CPU limit
+              minLength: 1
+              pattern: "^([1-9]|[12][0-9]|3[0-2])$|^(3[0-1][0-9]{3}|[1-2][0-9]{4}|[1-9][0-9]{0,3}|32000)m$"
+              x-ui-compare:
+                field: spec.size.reader.cpu
+                comparator: ">="
+                x-ui-error-message: "CPU limit cannot be less than cpu"
+              x-ui-placeholder: "e.g., '500m' or '1'"
+              x-ui-error-message: "Value doesn't match pattern, it should be number ranging from 1 to 32 or 1m to 32000m"
+            memory_limit:
+              type: string
+              title: Memory Limit
+              description: Memory limit
+              minLength: 1
+              pattern: "^(0\\.[1-9]|[1-9](\\.[0-9]+)?|[1-5][0-9](\\.[0-9]+)?|6[0-4])Gi$|^([1-9](\\.[0-9]+)?|[1-9][0-9]{1,3}(\\.[0-9]+)?|[1-5][0-9]{4}(\\.[0-9]+)?|6[0-3][0-9]{3}(\\.[0-9]+)?|64000)Mi$"
+              x-ui-compare:
+                field: spec.size.reader.memory
+                comparator: ">="
+                x-ui-error-message: "Memory limit cannot be less than memory"
+              x-ui-placeholder: "e.g., '800Mi' or '1.5Gi'"
+              x-ui-error-message: "Value doesn't match pattern, it should be number ranging from 1Gi to 64Gi or 1Mi to 64000Mi"
+            volume:
+              type: string
+              title: Volume
+              description: Volume size
+              pattern: "^[1-9][0-9]*[G]i?$"
+              x-ui-placeholder: "Ex. 8Gi"
+              x-ui-error-message: "Volume must be specified in the correct format with integer only (e.g., '10Gi' or '50Gi')"
+            instance_count:
+              type: integer
+              title: Instance Count
+              description: Number of Reader Instances
+              x-ui-placeholder: "Enter reader instance count"
+              x-ui-error-message: "Instance count must be a non-negative integer"
+              minimum: 0
+              maximum: 100
+          required:
+            - instance_count
+            - cpu
+            - memory
+            - volume
+        writer:
+          type: object
+          title: Writer
+          description: Writer Node Configuration
+          properties:
+            cpu:
+              type: string
+              title: CPU
+              description: Number of CPU Cores
+              minLength: 1
+              pattern: "^([1-9]|[12][0-9]|3[0-2])$|^(3[0-1][0-9]{3}|[1-2][0-9]{4}|[1-9][0-9]{0,3}|32000)m$"
+              x-ui-compare:
+                field: spec.size.writer.cpu_limit
+                comparator: "<="
+                x-ui-error-message: "CPU cannot be more than cpu limit"
+              x-ui-placeholder: "e.g., '500m' or '1'"
+              x-ui-error-message: "Value doesn't match pattern, it should be number ranging from 1 to 32 or 1m to 32000m"
+            memory:
+              type: string
+              title: Memory
+              description: Amount of memory
+              minLength: 1
+              pattern: "^(0\\.[1-9]|[1-9](\\.[0-9]+)?|[1-5][0-9](\\.[0-9]+)?|6[0-4])Gi$|^([1-9](\\.[0-9]+)?|[1-9][0-9]{1,3}(\\.[0-9]+)?|[1-5][0-9]{4}(\\.[0-9]+)?|6[0-3][0-9]{3}(\\.[0-9]+)?|64000)Mi$"
+              x-ui-compare:
+                field: spec.size.writer.memory_limit
+                comparator: "<="
+                x-ui-error-message: "Memory cannot be more than memory limit"
+              x-ui-placeholder: "e.g., '800Mi' or '1.5Gi'"
+              x-ui-error-message: "Value doesn't match pattern, it should be number ranging from 1Gi to 64Gi or 1Mi to 64000Mi"
+            cpu_limit:
+              type: string
+              title: CPU Limit
+              description: CPU limit
+              minLength: 1
+              pattern: "^([1-9]|[12][0-9]|3[0-2])$|^(3[0-1][0-9]{3}|[1-2][0-9]{4}|[1-9][0-9]{0,3}|32000)m$"
+              x-ui-compare:
+                field: spec.size.writer.cpu
+                comparator: ">="
+                x-ui-error-message: "CPU limit cannot be less than cpu"
+              x-ui-placeholder: "e.g., '500m' or '1'"
+              x-ui-error-message: "Value doesn't match pattern, it should be number ranging from 1 to 32 or 1m to 32000m"
+            memory_limit:
+              type: string
+              title: Memory Limit
+              description: Memory limit
+              minLength: 1
+              pattern: "^(0\\.[1-9]|[1-9](\\.[0-9]+)?|[1-5][0-9](\\.[0-9]+)?|6[0-4])Gi$|^([1-9](\\.[0-9]+)?|[1-9][0-9]{1,3}(\\.[0-9]+)?|[1-5][0-9]{4}(\\.[0-9]+)?|6[0-3][0-9]{3}(\\.[0-9]+)?|64000)Mi$"
+              x-ui-compare:
+                field: spec.size.writer.memory
+                comparator: ">="
+                x-ui-error-message: "Memory limit cannot be less than memory"
+              x-ui-placeholder: "e.g., '800Mi' or '1.5Gi'"
+              x-ui-error-message: "Value doesn't match pattern, it should be number ranging from 1Gi to 64Gi or 1Mi to 64000Mi"
+            volume:
+              type: string
+              title: Volume
+              description: Volume Size
+              pattern: "^[0-9]+[G]i?$"
+              x-ui-placeholder: "e.g., '10Gi' or '50Gi'"
+              x-ui-error-message: "Volume must be specified in the correct format with integer only (e.g., '10Gi' or '50Gi')."
+          required:
+            - cpu
+            - memory
+            - volume
       required:
-        - cpu
-        - memory
-        - volume
-        - instance_count
+        - writer
   required:
     - size
-    - cassandra_version
+    - mysql_version
   x-ui-order:
-    - cassandra_version
+    - mysql_version
     - size
+  x-ui-error-message: "Please provide required information for the size."
 sample:
-  $schema: https://facets-cloud.github.io/facets-schemas/schemas/cassandra/cassandra.schema.json
+  $schema: "https://facets-cloud.github.io/facets-schemas/schemas/mysql/mysql.schema.json"
   flavor: k8s
-  kind: cassandra
-  version: "0.1"
+  kind: mysql
   metadata: {}
-  spec:
-    cassandra_version: "5.0.2"
-    size:
-      cpu: "2"
-      memory: "2Gi"
-      volume: "5Gi"
-      instance_count: 1
+  version: "0.1"
   disabled: true
+  spec:
+    mysql_version: "8.0.4"
+    size:
+      writer:
+        cpu: "1"
+        memory: "1Gi"
+        cpu_limit: "1"
+        memory_limit: "1Gi"
+        volume: "8Gi"
+      reader:
+        cpu: "200m"
+        memory: "800Mi"
+        cpu_limit: "200m"
+        memory_limit: "800Mi"
+        volume: "8Gi"
+        instance_count: 0
