--- a/modules/aws_eventbridge/default/0.1/facets.yaml
+++ b/modules/aws_eventbridge/default/0.1/facets.yaml
@@ -3,7 +3,16 @@ flavor: default
 version: "0.1"
 description: Adds aws_eventbridge - default flavor
 clouds:
-- aws
+  - aws
+metadata:
+  title: Metadata of AWS EventBridge
+  type: object
+  properties:
+    namespace:
+      type: string
+      title: Namespace
+      description: Namespace in which AWS EventBridge should be deployed
+      default: default
 spec:
   title: AWS EventBridge
   description: Specification of the AWS EventBridge
@@ -11,8 +20,7 @@ spec:
   properties:
     rules:
       title: Rules
-      description: Map of rules which specify what EventBridge does with the events
-        delivered to each Event Bus.
+      description: Map of rules which specify what EventBridge does with the events delivered to each Event Bus.
       type: object
       patternProperties:
         "^[a-zA-Z][a-zA-Z0-9._-]*[a-zA-Z0-9]$":
@@ -28,17 +36,14 @@ spec:
             schedule_expression:
               type: string
               title: Schedule Expression
-              description: The scheduling expression for the rule. <b>This field is
-                required if event_pattern is not provided.</b>
+              description: The scheduling expression for the rule. <b>This field is required if event_pattern is not provided.</b>
               pattern: "^(rate|cron)\\([0-9a-zA-Z*\\-\\/\\?,\\s]+\\)$"
               x-ui-placeholder: e.g. rate(5 minutes) or cron(0 20 * * ? *)
-              x-ui-error-message: "Schedule Expression should be in the format rate(5
-                minutes) or cron(0 20 * * ? *)"
+              x-ui-error-message: "Schedule Expression should be in the format rate(5 minutes) or cron(0 20 * * ? *)"
             event_pattern:
               type: object
               title: Event Pattern
-              description: The event pattern to match. <b>This field is required if
-                schedule_expression is not provided.</b>
+              description: The event pattern to match. <b>This field is required if schedule_expression is not provided.</b>
               x-ui-placeholder: 'e.g. { "source": ["aws.ec2"] }'
               x-ui-yaml-editor: true
             tags:
@@ -59,10 +64,10 @@ spec:
               items:
                 type: string
               x-ui-override-disable: true
-      required:
-      - is_enabled
-      - description
-      - targets
+          required:
+            - is_enabled
+            - description
+            - targets
     event_bus_name:
       type: string
       title: Event Bus Name
@@ -70,15 +75,17 @@ spec:
       default: default
       pattern: "^[a-zA-Z0-9._-]{1,256}$"
       x-ui-placeholder: e.g. default
-      x-ui-error-message: "Event Bus Name should be between 1 and 256 characters long
-        and can contain only alphanumeric characters, hyphens, underscores, and periods."
+      x-ui-error-message: "Event Bus Name should be between 1 and 256 characters long and can contain only alphanumeric characters, hyphens, underscores, and periods."
     tags:
       type: object
       title: Tags
       description: The tags to assign to the EventBridge
       x-ui-yaml-editor: true
       x-ui-placeholder: "Enter the value of the tags. Eg. key1: value1"
+  required:
+    - rules
 sample:
+  $schema: "https://facets-cloud.github.io/facets-schemas/schemas/aws_eventbridge/aws_eventbridge.schema.json"
   kind: aws_eventbridge
   flavor: default
   version: "0.1"
@@ -87,9 +94,9 @@ sample:
     rules:
       TestRule:
         is_enabled: true
-        schedule_expression: rate(5 minutes)
-        description: This rule is used for sqs queue
+        schedule_expression: "rate(5 minutes)"
+        description: "This rule is used for sqs queue"
         targets: []
-    event_bus_name: default
+    event_bus_name: "default"
     tags: {}
   disabled: true
